switch to LINDASnext PROD and rerun

--- a/checker.ipynb
+++ b/checker.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ac858fcd",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bba5c306",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "6        5            Hedingen"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "30d17e08",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "95ef97ad",
    "metadata": {},
    "outputs": [
@@ -414,52 +414,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66924</td>\n",
-       "      <td>und</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66604</td>\n",
+       "      <td>de-ch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Zäziwil</td>\n",
+       "      <td>Risch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>628</td>\n",
+       "      <td>1707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66928</td>\n",
-       "      <td>de</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66611</td>\n",
+       "      <td>und</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Seedorf</td>\n",
+       "      <td>Oberhofen am Thunersee</td>\n",
        "      <td>literal</td>\n",
-       "      <td>312</td>\n",
+       "      <td>934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66935</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66613</td>\n",
        "      <td>und</td>\n",
        "      <td>literal</td>\n",
-       "      <td>La Brillaz</td>\n",
+       "      <td>Gurzelen</td>\n",
        "      <td>literal</td>\n",
-       "      <td>2234</td>\n",
+       "      <td>867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66932</td>\n",
-       "      <td>und</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66617</td>\n",
+       "      <td>de-ch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Zuzwil (BE)</td>\n",
+       "      <td>Frick</td>\n",
        "      <td>literal</td>\n",
-       "      <td>557</td>\n",
+       "      <td>4163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66938</td>\n",
-       "      <td>fr</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66623</td>\n",
+       "      <td>de-ch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Champoz</td>\n",
+       "      <td>Hemmiken</td>\n",
        "      <td>literal</td>\n",
-       "      <td>683</td>\n",
+       "      <td>2848</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -467,21 +467,21 @@
       ],
       "text/plain": [
        "  muni.type                             muni.value name.xml:lang name.type  \\\n",
-       "0       uri  http://www.wikidata.org/entity/Q66924           und   literal   \n",
-       "1       uri  http://www.wikidata.org/entity/Q66928            de   literal   \n",
-       "2       uri  http://www.wikidata.org/entity/Q66935           und   literal   \n",
-       "3       uri  http://www.wikidata.org/entity/Q66932           und   literal   \n",
-       "4       uri  http://www.wikidata.org/entity/Q66938            fr   literal   \n",
+       "0       uri  http://www.wikidata.org/entity/Q66604         de-ch   literal   \n",
+       "1       uri  http://www.wikidata.org/entity/Q66611           und   literal   \n",
+       "2       uri  http://www.wikidata.org/entity/Q66613           und   literal   \n",
+       "3       uri  http://www.wikidata.org/entity/Q66617         de-ch   literal   \n",
+       "4       uri  http://www.wikidata.org/entity/Q66623         de-ch   literal   \n",
        "\n",
-       "    name.value bfs.type bfs.value  \n",
-       "0      Zäziwil  literal       628  \n",
-       "1      Seedorf  literal       312  \n",
-       "2   La Brillaz  literal      2234  \n",
-       "3  Zuzwil (BE)  literal       557  \n",
-       "4      Champoz  literal       683  "
+       "               name.value bfs.type bfs.value  \n",
+       "0                   Risch  literal      1707  \n",
+       "1  Oberhofen am Thunersee  literal       934  \n",
+       "2                Gurzelen  literal       867  \n",
+       "3                   Frick  literal      4163  \n",
+       "4                Hemmiken  literal      2848  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "58634e88",
    "metadata": {},
    "outputs": [
@@ -558,58 +558,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q66924</td>\n",
-       "      <td>Zäziwil</td>\n",
-       "      <td>und</td>\n",
-       "      <td>628</td>\n",
-       "      <td>628</td>\n",
+       "      <td>Q66604</td>\n",
+       "      <td>Risch</td>\n",
+       "      <td>de-ch</td>\n",
+       "      <td>1707</td>\n",
+       "      <td>1707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Q66928</td>\n",
-       "      <td>Seedorf</td>\n",
-       "      <td>de</td>\n",
-       "      <td>312</td>\n",
-       "      <td>312</td>\n",
+       "      <td>Q66611</td>\n",
+       "      <td>Oberhofen am Thunersee</td>\n",
+       "      <td>und</td>\n",
+       "      <td>934</td>\n",
+       "      <td>934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Q66935</td>\n",
-       "      <td>La Brillaz</td>\n",
+       "      <td>Q66613</td>\n",
+       "      <td>Gurzelen</td>\n",
        "      <td>und</td>\n",
-       "      <td>2234</td>\n",
-       "      <td>2234</td>\n",
+       "      <td>867</td>\n",
+       "      <td>867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q66932</td>\n",
-       "      <td>Zuzwil (BE)</td>\n",
-       "      <td>und</td>\n",
-       "      <td>557</td>\n",
-       "      <td>557</td>\n",
+       "      <td>Q66617</td>\n",
+       "      <td>Frick</td>\n",
+       "      <td>de-ch</td>\n",
+       "      <td>4163</td>\n",
+       "      <td>4163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q66938</td>\n",
-       "      <td>Champoz</td>\n",
-       "      <td>fr</td>\n",
-       "      <td>683</td>\n",
-       "      <td>683</td>\n",
+       "      <td>Q66623</td>\n",
+       "      <td>Hemmiken</td>\n",
+       "      <td>de-ch</td>\n",
+       "      <td>2848</td>\n",
+       "      <td>2848</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        q         name lang   bfs  bfsInt\n",
-       "0  Q66924      Zäziwil  und   628     628\n",
-       "1  Q66928      Seedorf   de   312     312\n",
-       "2  Q66935   La Brillaz  und  2234    2234\n",
-       "3  Q66932  Zuzwil (BE)  und   557     557\n",
-       "4  Q66938      Champoz   fr   683     683"
+       "        q                    name   lang   bfs  bfsInt\n",
+       "0  Q66604                   Risch  de-ch  1707    1707\n",
+       "1  Q66611  Oberhofen am Thunersee    und   934     934\n",
+       "2  Q66613                Gurzelen    und   867     867\n",
+       "3  Q66617                   Frick  de-ch  4163    4163\n",
+       "4  Q66623                Hemmiken  de-ch  2848    2848"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "170e16ed",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "4   both    True   True  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b6c000fa",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_merge': {'both': 2119, 'wiki_only': 24, 'official_only': 1}, '_nameOk': {True: 1991, False: 153}, '_bfsOk': {True: 2139, False: 5}, '_bfsIntUnique': False, '_BfsCodeUnique': False, '_bfsIntNonUniqueValues': [None, 782, 1331, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644], '_BfsCodeNonUniqueValues': [782, 1331, None, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644]}\n"
+      "{'_merge': {'both': 2119, 'wiki_only': 22, 'official_only': 1}, '_nameOk': {True: 1991, False: 151}, '_bfsOk': {True: 2138, False: 4}, '_bfsIntUnique': False, '_BfsCodeUnique': False, '_bfsIntNonUniqueValues': [None, 782, 1331, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644], '_BfsCodeNonUniqueValues': [782, 1331, None, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644]}\n"
      ]
     }
    ],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6da86d92",
    "metadata": {},
    "outputs": [
@@ -943,14 +943,14 @@
        "4  http://www.w3.org/2001/XMLSchema#integer         literal             10459"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Endpoint URL\n",
-    "url = \"https://lindas.int.cz-aws.net/query\"\n",
+    "url = \"https://lindas.cz-aws.net/query\"\n",
     "\n",
     "headers = {\n",
     "    \"Accept\": \"application/sparql-results+json\"\n",
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2fe5faa5",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
        "2279           16669     6831  01.01.2026           Moutier"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bafad9f7",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
        "0  http://www.w3.org/2001/XMLSchema#integer    literal           7"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0ad1a4fb",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1239,7 @@
        "0  http://www.w3.org/2001/XMLSchema#integer    literal          14"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d936e9e7",
    "metadata": {},
    "outputs": [],
